made some improvements

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,16 +5,25 @@ table {
 }
 
 td, th {
-    border: 1px solid #dddddd;
     text-align: center;
     padding: 8px;
 }
 
-tr:nth-child(even) {
+tr:nth-child(odd) {
     background-color: #dddddd;
 }
 
 
 .associated_stations table th, .associated_stations table td   {
     text-align: left;
+}
+
+.wireless table td {
+    text-align: left;
+    background-color: white;
+    font-family: arial, sans-serif;
+}
+
+.wireless table {
+    margin-left: 200px;
 }
